[package]
name = "shader_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = {git = "https://github.com/vixeliz/ggez", branch = "devel"}
# ggegui = {git = "https://github.com/vixeliz/ggegui"}
ggegui = {path= "../ggegui"}
itertools = "0.11.0"
rand = "0.8.5"
egui_code_editor = "0.1.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true # Remember to change this
opt-level = 3
lto = true #Change this to be per platform windows doesn't seem to like it


